fixed new badge notifications not showing for users returning to the site after some time